# DysonianLineCNN

./: .gitattributes  .gitignore  Analysis.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
Documentation/: Architecture.md  Dyson.bib
config/: README.md  dataset.json  inference.json  paths.example.json  training.json
config/sets/: set-1.json  set-2.json  set-3.json  set-4.json  set-5.json  set-6.json
data/: DysonFitBatch.m  DysonFitEasyspin.m  DysonFitEasyspin_Batch.m  DysonFitEasyspin_Simplex.m  DysonFitMatlab.m
dyson_cnn/: __init__.py  config.py  data.py  evaluate.py  infer.py  model.py  train.py
latex/: report.tex
matlab/: DysonGeneratorMix.m  PrepareOneSpectrumForCNN.m  Validator.m  dysonAD.m  dysonAD_plate.m  dysonAD_sphere.m  dysonNarrow.m  load_config.m  test_dyson_formulas.m
matlab/baseline/: FitAll.m  FitEasyspin.m  FitMatlab.m
notebooks/: 01_train_and_eval.ipynb  02_infer_real.ipynb  _legacy_monolith.ipynb
results/set-1/: comparison.csv
results/set-1/cnn/: summary.csv
results/set-1/easyspin/: summary.csv
results/set-1/matlab/: summary.csv
results/set-2/: comparison.csv
results/set-2/cnn/: summary.csv
results/set-2/easyspin/: summary.csv
results/set-2/matlab/: summary.csv
results/set-3/: comparison.csv
results/set-3/cnn/: summary.csv
results/set-3/easyspin/: summary.csv
results/set-4/: comparison.csv
results/set-5/: comparison.csv
results/set-6/: comparison.csv
scripts/: figure6_comparison.py
tests/: conftest.py  test_config.py  test_data.py  test_infer.py  test_model.py
zenodo/: DESCRIPTION.txt  zenodo.json
(+10 files in other folders)
